src/test/ui/issues/issue-23589.stderr
error[E0214]: parenthesized parameters may only be used with a trait
  --> $DIR/issue-23589.rs:2:15
   |
LL |     let v: Vec(&str) = vec!['1', '2'];
   |               ^^^^^^ only traits may use parentheses

error[E0107]: wrong number of type arguments: expected 1, found 0
  --> $DIR/issue-23589.rs:2:12
   |
LL |     let v: Vec(&str) = vec!['1', '2'];
   |            ^^^^^^^^^ expected 1 type argument

error: aborting due to 2 previous errors

Some errors occurred: E0107, E0214.
For more information about an error, try `rustc --explain E0107`.
